--- a/index.html
+++ b/index.html
@@ -6,4 +6,7 @@
   <body>
     <h1>ゆおのよせい</h1>
     <p>ないよ？？というか見にきたんかwww</p>
+    <img src="https://cdn.discordapp.com/attachments/920971323214299137/921943907724578906/2021-12-19_10.55.11.png">
+    <img src="https://cdn.discordapp.com/attachments/920971323214299137/921943924384346182/2021-12-17_20.47.22.png">
+    
 </html>
